[package]
name = "steampipe-forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Steampipe plugin table generator from IaC forge IR"
homepage = "https://github.com/pleme-io/steampipe-forge"
repository = "https://github.com/pleme-io/steampipe-forge"
license = "MIT"
categories = ["development-tools", "code-generators"]
keywords = ["steampipe", "plugin", "codegen", "openapi"]

[lints.clippy]
pedantic = "warn"

[dependencies]
iac-forge = { git = "https://github.com/pleme-io/iac-forge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
